# mcp-on-eks

./: .gitignore  README.md  pyproject.toml
eks/application/: application.yaml  memo  serviceaccount.yaml  streamlit.yaml
eks/frontend/: frontend.yaml
eks/mcp-server/: collectdata.yaml  stock-analysis.yaml
eks/mcp/client/: client.yaml
eks/mcp/server/: collectdata.yaml  stock-analysis.yaml
eks/rag-service/: rag.yaml
infra/cdk/: README.md  app.py  cdk.json  requirements.txt
infra/cdk/stacks/: bedrock_stack.py  dynamodb_stack.py  eks_stack.py
infra/tf/: .terraform.lock.hcl  helm.tf  main.tf  terraform.tfstate  terraform.tfstate.backup
src/application/: Dockerfile  analysis.py  api.py  app.py  bedrock_models.py  chat.py  config.json  coordinator.py  cost_analysis.py  datacollector.py  info.py  knowledge_base.py  mcp-server.py  mcp_basic.py  mcp_coder.py  mcp_config.json  mcp_config.py  mcp_cost.py  mcp_log.py  mcp_nova_canvas.py  mcp_rag.py  mcp_s3.py  mcp_server_aws_cli.py  mcp_server_aws_cost.py  mcp_server_aws_log.py  mcp_server_aws_s3.py  mcp_server_basic.py  mcp_server_coder.py  mcp_server_image_generation.py  mcp_server_rag.py  mcp_stock_data.py  requirements.txt  router.py  search.py  supervisor.py  swarm.py  tool_use.py  utils.py
src/application/nova_canvas/: consts.py  models.py  novacanvas.py
src/chatbotui/: Dockerfile  main.py
src/frontend/: app.py  requirements.txt
src/mcpclient/: main.py  mcpclient.py  mcpclient2.py  message.py  model.py
src/mcpservers/: app.py
src/mcpservers/s3/: s3.py  (+1 more)
src/rag/: Dockerfile  main.py  requirements.txt
(+10 files in other folders)
