[project]
name = "mcpworkshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.23",
    "botocore>=1.37.30",
    "fastapi>=0.115.12",
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
    "yfinance>=0.2.55",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = ["src/weather", "src/mcpservers/time"]
